# compressta

./: .gitignore  Cargo.toml  README.md
src/: main.rs  types.rs
src/commands/: create_tree.rs  mint_nft.rs  mod.rs
src/instagram/: client.rs  constants.rs  types.rs
src/utils/: config.rs  mod.rs  upload_metadata.rs
