[package]
name = "compressta"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
instagram-media-shortcode = "0.1.4"
clap = "4.5.53"
mpl-bubblegum = "2.1.1"
solana-sdk = "2.0.0"
solana-cli-config = "2.0.0"
solana-client = "2.0.0"
mpl-account-compression = "1.0.0"
